trace collector